--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
     "wavesurfer.js": "^7.12.1"
