feat: add Dev Tools for JSON/YAML formatting and HTML/CSS/JS playground
- Implemented a new Dev Tools section with JSON tools for formatting, validating, and converting between JSON and YAML.
- Added an HTML/CSS/JS playground with live preview capabilities.
- Introduced new components: DevToolsToolbar, DevToolsTabs, JsonEditor, JsonTools, HtmlPlayground, and DevToolsTabs.
- Updated routing to include the new Dev Tools view.
- Enhanced the Navbar to include a link to the Dev Tools.
- Added js-yaml dependency for YAML processing.
- Updated settings to allow npm install commands.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "js-yaml": "^4.1.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
     "three": "^0.182.0",
