--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.11",
+    "codemirror": "^6.0.2",
     "js-yaml": "^4.1.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
