feat: agregar un editor de Markdown con vista previa y opciones de descarga; actualizar la barra de navegación y las dependencias

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.11",
     "codemirror": "^6.0.2",
+    "dompurify": "^3.3.1",
     "js-yaml": "^4.1.1",
+    "marked": "^17.0.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
     "three": "^0.182.0",
