--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tbisoftware/phone": "^2.0.6",
     "@codemirror/autocomplete": "^6.20.0",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.11",
@@ -17,6 +16,8 @@
     "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.11",
+    "@tbisoftware/phone": "^2.0.6",
+    "@vueuse/core": "^14.1.0",
     "codemirror": "^6.0.2",
     "dompurify": "^3.3.1",
     "js-yaml": "^4.1.1",
@@ -26,7 +27,8 @@
     "three": "^0.182.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
-    "wavesurfer.js": "^7.12.1"
+    "wavesurfer.js": "^7.12.1",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
