--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^14.1.0",
     "codemirror": "^6.0.2",
     "dompurify": "^3.3.1",
+    "exceljs": "^4.4.0",
     "js-yaml": "^4.1.1",
     "marked": "^17.0.1",
     "pdf-lib": "^1.17.1",
