--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "three": "^0.182.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
-    "wavesurfer.js": "^7.12.1",
-    "xlsx-js-style": "^1.2.0"
+    "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
