--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dompurify": "^3.3.1",
     "exceljs": "^4.4.0",
     "js-yaml": "^4.1.1",
+    "leaflet": "^1.9.4",
     "marked": "^17.0.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.530",
