--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.11",
+    "@harbour-enterprises/superdoc": "^1.8.3",
+    "@hocuspocus/provider": "^3.4.4",
     "@tbisoftware/phone": "^2.0.6",
     "@vueuse/core": "^14.1.0",
     "codemirror": "^6.0.2",
@@ -31,7 +33,8 @@
     "three": "^0.182.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
-    "wavesurfer.js": "^7.12.1"
+    "wavesurfer.js": "^7.12.1",
+    "yjs": "^13.6.29"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
